deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikasi-nginx
spec:
  selector:
    matchLabels:
      app: aplikasi-nginx
  template:
    metadata:
      labels:
        app: aplikasi-nginx
    spec:
      containers:
      - name: aplikasi-nginx
        image: nginx:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
          
---

apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: NodePort
  selector:
    app: aplikasi-nginx
  ports:
  - port: 8383
    targetPort: 80
    nodePort: 30010
