deployment_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aplikasi-nginx
spec:
  selector:
    matchLabels:
      app: aplikasi-nginx
  template:
    metadata:
      labels:
        app: aplikasi-nginx
    spec:
      containers:
      - name: aplikasi-nginx
        image: nginx:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
        ports:
        - containerPort: 80
          
---

apiVersion: v1
kind: Service
metadata:
  name: service-nginx
spec:
  type: ClusterIP
  selector:
    app: aplikasi-nginx
  ports:
  - port: 8484
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
spec:
  rules:
  - host: test.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-nginx
            port: 
              number: 8484
